[package]
name = "rust-stippling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
ndarray = "0.15"
kd-tree = "0.4"
typenum = "1.14"

[[example]]
name = "image-only"
path = "image/image_only.rs"

[[example]]
name = "image-and-particles"
path = "image-and-particle/image_and_particles.rs"
